--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: azure;
-    padding-top: 2px;
-    padding-left: 20%;
+    
+ 
+
+}
+
+.container{
+    background-color: rgb(207, 162, 248);
 }
