--- a/style.css
+++ b/style.css
@@ -25,3 +25,21 @@ h1{
     text-align: center;
     font-weight: bold;
 }
+
+input{
+    flex: 1;
+    padding: 0;
+}
+
+button{
+    padding: 0.5rem 1rem;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+
+li{
+    padding: 0.5rem;
+}
