--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ input{
 
 button{
     padding: 0.5rem 1rem;
+    border-radius: 50px;
+    background-color: rgb(122, 255, 122);
+    border-color: rgb(61, 61, 61);
 }
 
 ul{
@@ -42,4 +45,5 @@ ul{
 
 li{
     padding: 0.5rem;
+    background-color: #eee;
 }
