--- a/style.css
+++ b/style.css
@@ -46,4 +46,8 @@ ul{
 li{
     padding: 0.5rem;
     background-color: #eee;
+    margin: 0.5rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
